fix topic list layout issues

--- a/components/DashboardLayout/DashboardLayout.module.scss
+++ b/components/DashboardLayout/DashboardLayout.module.scss
@@ -19,7 +19,7 @@
             }
 
             &.Desktop {
-                height: 100%;
+                height: calc(100% - 60px);
             }
         }
     }
